# mai

./: .gitignore  lec1.ipynb  lec10.ipynb  lec11.ipynb  lec12-1-lenet.ipynb  lec12-10-nlp-mlstm.ipynb  lec12-2-alexnet.ipynb  lec12-3-transfer-learning.ipynb  lec12-4-preprocessing.ipynb  lec12-5-nlp-dense.ipynb  lec12-5-text-classif-dense.ipynb  lec12-6-nlp-conv.ipynb  lec12-7-nlp-rnn.ipynb  lec12-8-nlp-lstm.ipynb  lec12-9-nlp-blstm.ipynb  lec2.ipynb  lec3.ipynb  lec4.ipynb  lec4_reg.ipynb  lec5.ipynb  lec6.ipynb  lec7.ipynb  lec8.ipynb  pyproject.toml  readme.md  run.py  transformers.py  utils.py  utils_clusters.py  visual.py
backend/: __init__.py  api.py  service.py
data/: dollar.csv  text.csv
data/density/: density_test.csv  density_train.csv
data/food/: food-ga.csv  food.csv
data/orders/: customers.csv  order_items.csv  products.csv  sellers.csv
data/text/: tz_01.docx  tz_02.docx  tz_03.docx  tz_04.docx  tz_05.docx  tz_06.docx  tz_07.docx  tz_08.docx  tz_09.docx  tz_10.docx  tz_11.docx  tz_12.docx  tz_13.docx  tz_14.docx  tz_15.docx  tz_16.docx  tz_17.docx  tz_18.docx  tz_19.docx  tz_20.docx  Архитектура, управляемая модель.docx  Введение в проектирование ИС.docx  Встроенные операторы SQL.docx  Методологии разработки программного обеспечения 2.docx  Методологии разработки программного обеспечения.docx  Методы композиции и декомпозиции.docx  Модели представления данных в СУБД.docx  Некоторые особенности проектирования.docx  Непроцедурный доступ к данным.docx  Процедурное расширение языка SQL.docx  Системные объекты базы данных.docx  Технология создания распр ИС.docx  Требования к проекту.docx  Условия целостности БД.docx  Характеристики СУБД.docx  Этапы разработки проекта1.docx  Этапы разработки проекта2.docx  Этапы разработки проекта3.docx  Этапы разработки проекта4.docx  Этапы разработки проекта5.docx  (+1 more)
